Fix dependency update workflow

--- a/.github/workflows/dependency-updates.yml
+++ b/.github/workflows/dependency-updates.yml
@@ -3,6 +3,10 @@ name: Dependency Update
 on:
   schedule:
     - cron: '0 0 * * 0' # Run every Sunday at midnight UTC
+  push:
+    branches:
+      - main
+      - master
 
 jobs:
   update:
