email on script completeion

--- a/.github/workflows/scheduled_task.yml
+++ b/.github/workflows/scheduled_task.yml
@@ -3,6 +3,10 @@ name: Scheduled Tasks
 on:
   schedule:
     - cron: '0 0 * * *' # Runs at midnight UTC every day
+  push:
+    branches:
+      - main
+      - master
 
 jobs:
   scheduled_task:
@@ -20,3 +24,15 @@ jobs:
 
       - name: Echo Scheduled Task Completed
         run: echo "Scheduled Task Completed!"
+
+      - name: Send email
+        uses: dawidd6/action-send-mail@v2
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.MAIL_USERNAME }}
+          password: ${{ secrets.MAIL_PASSWORD }}
+          subject: Scheduled Task completed
+          to: your-email@example.com
+          from: no-reply@example.com
+          body: The scheduled task has completed successfully.
