--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -7,21 +7,25 @@ on:
       - master
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Use Node.js
+
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 16
+
       - name: Install dependencies
         run: npm install
+
       - name: Build documentation
         run: npm run docs:build
-      - name: Deploy to GitHub Pages
+
+      - name: Deploy documentation
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GH_PAGES_TOKEN }}
-          publish_dir: ./build/docs
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
