--- a/.github/workflows/dependency-updates.yml
+++ b/.github/workflows/dependency-updates.yml
@@ -3,10 +3,10 @@ name: Dependency Update
 on:
   schedule:
     - cron: '0 0 * * 0' # Run every Sunday at midnight UTC
-  push:
-    branches:
-      - main
-      - master
+  # push:
+  #   branches:
+  #     - main
+  #     - master
 
 jobs:
   update:
