--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,10 +1,12 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
-    branches:
-      - main
-      - master
+  # push:
+  #   branches:
+  #     - main
+  #     - master
+  pull_request:
+    branches: [ main, master ]
 
 jobs:
   deploy:
