--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,10 +1,12 @@
 name: Documentation
 
 on:
-  push:
-    branches:
-      - main
-      - master
+  # push:
+  #   branches:
+  #     - main
+  #     - master
+    pull_request:
+      branches: [ main, master ]
 
 jobs:
   build:
