--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -3,10 +3,10 @@ name: Code Review
 on:
   pull_request:
     types: [opened, synchronize, reopened]
-  push:
-    branches:
-      - main
-      - master
+  # push:
+  #   branches:
+  #     - main
+  #     - master
 
 jobs:
   review:
