--- a/.github/workflows/dependency-updates.yml
+++ b/.github/workflows/dependency-updates.yml
@@ -5,9 +5,7 @@ on:
     - cron: '0 0 * * 0' # Run every Sunday at midnight UTC
   push:
     branches:
-      - main
       - master
-      - dev
 
 jobs:
   update:
@@ -19,13 +17,11 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 20
-
-      - name: Install npm-check-updates
-        run: npm install -g npm-check-updates
+          node-version: 14
 
       - name: Update dependencies
         run: |
+          npm install -g npm-check-updates
           ncu -u
           npm install
 
@@ -33,17 +29,6 @@ jobs:
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
-          git checkout dev
           git add -f package.json package-lock.json
           git commit -m "Chore: Update dependencies"
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/tauseef-creator/SCD-github-workflow-assignment-02.git HEAD:refs/heads/dev
-
-      - name: Create pull request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: dev
-          base: master
-          title: 'Chore: Update dependencies'
-          body: |
-            This pull request updates the dependencies of the project.
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/tauseef-creator/SCD-github-workflow-assignment-02.git HEAD:refs/heads/master
