--- a/.github/workflows/dependency-updates.yml
+++ b/.github/workflows/dependency-updates.yml
@@ -31,4 +31,5 @@ jobs:
           git config --global user.name "GitHub Action"
           git add -f package.json package-lock.json
           git commit -m "Chore: Update dependencies"
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/tauseef-creator/SCD-github-workflow-assignment-02.git HEAD:refs/heads/master
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/tauseef-creator/SCD-github-workflow-assignment-02.git HEAD:master
+        
