--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,12 +1,13 @@
 name: Documentation
 
 on:
-  # push:
-  #   branches:
-  #     - main
-  #     - master
-    pull_request:
-      branches: [ main, master ]
+  push:
+    branches:
+      - main
+      - master
+
+    # pull_request:
+    #   branches: [ main, master ]
 
 jobs:
   build:
